--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "nodemon",
     "build": "npm-run-all clean transpile",
     "server": "node ./dist/bin/www",
-    "dev": "NODE_ENV=development npm-run-all build server",
-    "prod": "NODE_ENV=production npm-run-all build server",
+    "dev": "cross-env NODE_ENV=development npm-run-all build server",
+    "prod": "cross-env NODE_ENV=production npm-run-all build server",
     "transpile": "babel ./server --out-dir dist --copy-files",
     "clean": "rimraf dist"
   },
@@ -29,6 +29,7 @@
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
